tests/cases/scc/error/0002-missinginclude.c
//!necc-dbg @ -as
#include "MISSING.h"
